Fix z-index of datepicker

--- a/app/assets/stylesheets/generic.scss
+++ b/app/assets/stylesheets/generic.scss
@@ -21,7 +21,7 @@ strong,
 }
 
 .datepicker{
-  z-index: 100 !important;
+  z-index: 1200 !important;
 }
 
 .opacity-5 {
